# haskell-docker-example

./: LICENSE  README.md  haskell-docker-example.cabal  stack.yaml
app/: Main.hs
